--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ==
-Introduction
+## Introduction
 This is a repository which aims to build a standard and open source platform of object detecting and tracking for application. 
 It will contain popular algorithms of object detecting and tracking with detail program comments, deployment demoes and easy 
 to use.
